# skard

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: main.c  sk_ast.c  sk_ast.h  sk_checker.c  sk_checker.h  sk_compiler.c  sk_compiler.h  sk_debug.c  sk_debug.h  sk_hashmap.c  sk_hashmap.h  sk_lexer.c  sk_lexer.h  sk_memory.c  sk_memory.h  sk_object.c  sk_object.h  sk_parser.c  sk_parser.h  sk_type.c  sk_type.h  sk_utils.c  sk_utils.h  sk_value.c  sk_value.h  sk_vm.c  sk_vm.h  skard.h
tests/ast/: call_01.sk  call_01.sk.expect  call_02.sk  call_02.sk.expect  fn_decl_01.sk  fn_decl_01.sk.expect  fn_decl_02.sk.expect  if_01.sk  if_01.sk.expect  let_01.sk  let_01.sk.expect  let_02.sk  let_02.sk.expect  print_01.sk  print_01.sk.expect  print_02.sk  print_02.sk.expect  return_01.sk  return_01.sk.expect  return_02.sk  return_02.sk.expect  syntax_error_01.sk.stderr  while_01.sk  while_01.sk.expect
tests/run/: equality_01.sk  factorial.sk  factorial.sk.expect  fibonacci.sk  fibonacci.sk.expect  if_01.sk  if_02.sk  if_03.sk  let_01.sk  let_02.sk  let_03.sk  let_03.sk.expect  print_01.sk  print_02.sk  print_02.sk.expect  return_01.sk  syntax_error_01.sk.stderr  unary_01.sk  unary_01.sk.expect  while_01.sk
tools/: test.py  test_groups.py
